# tradedata

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.cursor/plans/: trading-data-foundation.plan.md
.github/actions/setup-env/: action.yml
.github/workflows/: ci.yml
src/tradedata/: __init__.py
src/tradedata/application/: __init__.py  credentials.py  listing.py  robinhood_sync.py
src/tradedata/cli/: __init__.py  main.py
src/tradedata/cli/commands/: login.py  show.py  sync.py
src/tradedata/data/: __init__.py  models.py  schema.py  storage.py  validator.py
src/tradedata/data/repositories/: __init__.py  base.py  execution.py  option_leg.py  option_order.py  position.py  stock_order.py  transaction.py  transaction_link.py
src/tradedata/sources/: __init__.py  base.py  factory.py  robinhood.py
stubs/robin_stocks/: __init__.py  robinhood.pyi
tests/: test_placeholder.py
tests/fixtures/robinhood/: bank_transfers.json  crypto_orders.json  dividends.json  option_orders.json  stock_orders.json
tests/tradedata/: __init__.py
tests/tradedata/application/: test_credentials.py  test_listing.py  test_robinhood_sync.py
tests/tradedata/cli/: test_login.py  test_show_transactions.py
tests/tradedata/cli/commands/: test_show.py  test_sync.py
tests/tradedata/data/: __init__.py  test_models.py  test_schema.py  test_storage.py  test_validator.py
tests/tradedata/data/repositories/: __init__.py  test_dependency_injection.py  test_execution.py  test_option_leg.py  test_option_order.py  test_position.py  test_stock_order.py  test_transaction.py  test_transaction_link.py
tests/tradedata/sources/: test_factory.py  test_robinhood.py
