[project]
name = "tradedata"
version = "0.1.0"
description = "Unified trading data foundation layer"
requires-python = ">=3.9"
dependencies = [
  "robin-stocks>=2.0.0",
  "keyring>=24.0.0",
  "click>=8.1.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "mdformat>=0.7.0",
  "mdformat-gfm>=0.3.0", # GitHub Flavored Markdown support
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "pytest-mock>=3.10.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
  "bandit>=1.7.0",
  "pre-commit>=3.0.0",
  "pyyaml>=6.0.0",       # YAML syntax validation
  "tomli>=2.0.0",        # TOML syntax validation (for Python < 3.11)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tradedata"]

[project.scripts]
tradedata = "tradedata.cli.main:cli"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.mdformat]
number = true
wrap = 80
